// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game actions Apply card match Matches "default" snapshot 1`] = `
Array [
  Object {
    "message": "COMMIT: setScore",
    "payload": 570,
  },
  Object {
    "message": "COMMIT: setMatched",
    "payload": 12,
  },
  Object {
    "message": "COMMIT: queueCardToHide",
    "payload": "card1",
  },
  Object {
    "message": "COMMIT: queueCardToHide",
    "payload": "card2",
  },
  Object {
    "message": "DISPATCH: commitDelayed",
    "payload": Object {
      "delay": 500,
      "id": "applyCardMatch-1",
      "mutation": "applyHiding",
    },
  },
]
`;

exports[`Game actions Apply card match Matches "last pair" snapshot 1`] = `
Array [
  Object {
    "message": "COMMIT: setScore",
    "payload": 150,
  },
  Object {
    "message": "COMMIT: setMatched",
    "payload": 12,
  },
  Object {
    "message": "COMMIT: queueCardToHide",
    "payload": "card1",
  },
  Object {
    "message": "COMMIT: queueCardToHide",
    "payload": "card2",
  },
  Object {
    "message": "DISPATCH: endGame",
  },
]
`;

exports[`Game actions Flip card Matches "2 flipped cards -> again" snapshot 1`] = `
Array [
  Object {
    "message": "COMMIT: applyHiding",
  },
  Object {
    "message": "COMMIT: maskAllCards",
  },
  Object {
    "message": "COMMIT: flipCard",
    "payload": Object {
      "flipped": true,
      "url": "AS",
    },
  },
]
`;

exports[`Game actions Flip card Matches "2 flipped cards -> again" snapshot 2`] = `
Array [
  Object {
    "message": "COMMIT: applyHiding",
  },
  Object {
    "message": "COMMIT: maskAllCards",
  },
  Object {
    "message": "COMMIT: flipCard",
    "payload": Object {
      "flipped": false,
      "url": "AS",
    },
  },
]
`;

exports[`Game actions Flip card Matches "card is hidden" snapshot 1`] = `
Array [
  Object {
    "message": "COMMIT: applyHiding",
  },
]
`;

exports[`Game actions Flip card Matches "flipping first card" snapshot 1`] = `
Array [
  Object {
    "message": "COMMIT: applyHiding",
  },
  Object {
    "message": "COMMIT: maskAllCards",
  },
  Object {
    "message": "COMMIT: flipCard",
    "payload": Object {
      "flipped": false,
      "url": "AS",
    },
  },
]
`;

exports[`Game actions Flip card Matches "flipping same card" snapshot 1`] = `
Array [
  Object {
    "message": "COMMIT: applyHiding",
  },
]
`;

exports[`Game actions Flip card Matches "flipping second card" snapshot 1`] = `
Array [
  Object {
    "message": "COMMIT: applyHiding",
  },
  Object {
    "message": "COMMIT: flipCard",
    "payload": Object {
      "flipped": false,
      "url": "AS",
    },
  },
  Object {
    "message": "DISPATCH: matchCards",
  },
]
`;

exports[`Game actions Match cards Matches "match" snapshot 1`] = `
Array [
  Object {
    "message": "DISPATCH: applyCardMatch",
  },
]
`;

exports[`Game actions Match cards Matches "mismatch" snapshot 1`] = `
Array [
  Object {
    "message": "COMMIT: setScore",
    "payload": NaN,
  },
]
`;
